# andypeterson2.github.io

./: .dashboard.yaml  .env.example  .gitignore  .gitmodules  .lighthouserc.json  .lighthouserc.mobile.json  .npmrc  .prettierignore  .stylelintrc.json  CNAME  CONTRIBUTING.md  DESIGN_SYSTEM.md  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  PORTFOLIO_OVERVIEW.md  README.md  astro.config.mjs  coverletter.tex  data.tex  docker-compose.dashboard.yml  docker-compose.yml  eslint.config.js  generate-manifest.py  github.js  index.html  lighthouserc.js  nonograms.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  quantumvideo.html  resume-config.json  robots.txt  serve.py  shared  site-manifest.json  sitemap.xml  (+6 more)
.certs/: key.pem
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
classifiers/: index.html
cv/: .dashboard.yaml  awesome-cv.cls  cv.tex  data.json  docker-compose.yml  experience.tex  index.html  presentation.tex  references.tex  skills.tex  style.css
dashboard/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  config.example.yaml  index.html  pyproject.toml
dockerfiles/: Dockerfile.classifier  Dockerfile.cv-editor  Dockerfile.nonogram  Dockerfile.videochat-frontend  Dockerfile.videochat-middleware  Dockerfile.website
docs/: cv-editor.md  editor-redesign.md  main-site.md  nonogram.md  quantum-glossary.md  quantum-protein-kernel.md  quantum-video-chat.md  security-headers.md
me/: index.html
nginx/: nginx.conf
nonogram/: index.html
public/: _headers
quantum-protein-kernel/: Dockerfile  pyproject.toml  requirements.txt
resume/: committees.tex
scripts/: build-tokens.js  check-name-leakage.sh  check-security-headers.sh  eslint-plugin-design-system.js  generate-manifest.py  new-page.sh  serve.py  vendor-app.sh
shared/: site-nav.js  theme-bootstrap.js
src/: content.config.ts
task-randomizer/: serve.mjs
tech-tree/: docker-compose.yml  index.html  style.css
tests/: blog.test.ts  classifier-components.test.ts  classifier-cross-cutting.test.ts  classifier-phase2.test.ts  classifiers-page.test.ts  code-quality.test.ts  conftest.py  contact-form.test.ts  contract-client.test.ts  dark-mode.test.ts  deployment.test.ts  editor-doc-diff.test.ts  editor-export.test.ts  editor-field-shadow.test.ts  editor-history-controller.test.ts  editor-latex-escape.test.ts  editor-menus.test.ts  editor-reorder-keydown.test.ts  editor-tour-shape.test.ts  editor-tour.test.ts  editor-undo-controller.test.ts  editor-undo.test.ts  editor-variant-lens.test.ts  pages.test.ts  phase5-polish.test.ts  privacy-seo.test.ts  project-detail.test.ts  projects-data.test.ts  qa-testing.test.ts  resume.test.ts  security.test.ts  test_app.py  (+5 more)
(+235 files in other folders)
